decided to remove grappelli for the time being, and stick to the Django-provided admin theme. updated INSTALL doc and example settings file to reflect that

--- a/docs/conf/rainmap.conf
+++ b/docs/conf/rainmap.conf
@@ -17,6 +17,7 @@ WSGISocketPrefix /var/run/wsgi
 
     WSGIScriptAlias / /var/local/rainmap/django/rainmap.wsgi
     
+    Alias /admin-media/ /var/local/rainmap/public/admin-media/
     Alias /storage /var/local/rainmap/storage/
 
     Alias /robots.txt /var/local/rainmap/public/robots.txt
