--- a/src/django/rainmap/settings.example
+++ b/src/django/rainmap/settings.example
@@ -63,11 +63,7 @@ MEDIA_URL = '/'
 # URL prefix for admin media -- CSS, JavaScript and images. Make sure to use a
 # trailing slash.
 # Examples: "http://foo.com/media/", "/media/".
-ADMIN_MEDIA_PREFIX = '/admin/'
-
-# Grappelli is the admin theme used by Rainmap
-GRAPPELLI_ADMIN_HEADLINE = "Rainmap Admin"
-GRAPPELLI_ADMIN_TITLE = "Rainmap Admin"
+ADMIN_MEDIA_PREFIX = '/admin-media/'
 
 ALLOWED_INCLUDE_ROOTS = MEDIA_ROOT
 
@@ -102,7 +98,6 @@ TEMPLATE_DIRS = (
 TEMPLATE_CONTEXT_PROCESSORS = (
     'django.contrib.messages.context_processors.messages',
     'django.contrib.auth.context_processors.auth',
-    'django.core.context_processors.request',
 )
 
 INSTALLED_APPS = (
@@ -111,7 +106,6 @@ INSTALLED_APPS = (
     'django.contrib.sessions',
     'django.contrib.messages',
     'django.contrib.sites',
-    'grappelli',
     'django.contrib.admin',
     'djcelery',
     'registration',
