new template/theme for self-hosted version of Rainmap. this should be the GSOC'10 commit, didn't notice the mercurial -> svn conversion had issues before my previous commit

--- a/src/django/rainmap/settings.example
+++ b/src/django/rainmap/settings.example
@@ -92,7 +92,7 @@ ROOT_URLCONF = 'rainmap.urls'
 TEMPLATE_DIRS = (
     # Always use forward slashes, even on Windows.
     # Don't forget to use absolute paths, not relative paths.
-    os.path.join(PROJECT_DIR, "templates"),
+    os.path.join(PROJECT_DIR, "templates/default"),
 )
 
 TEMPLATE_CONTEXT_PROCESSORS = (
