All asynchronous tasks are now executed outside Django, and scan setup is performed in the app controller (views.py). With tasks outside Django, we can properly deploy multiple workers that will only deal with scanning and converting results into HTML, then pass results back to the webapp server.
Tasks are now in src/celeryd/rainq/tasks.py. The settings.example file shows how RabbitMQ clustering should be setup, with CELERY routes. It is necessary to perform the `process_result` task on the webapp server (wherever Django runs) for now, so that's what we need routes for.

--- a/src/django/rainmap/settings.example
+++ b/src/django/rainmap/settings.example
@@ -53,7 +53,7 @@ OUTPUT_URL = "/storage/"
 
 # Absolute path to the directory that holds media.
 # Example: "/home/media/media.lawrence.com/"
-MEDIA_ROOT = "/var/local/rainmap/public/"
+MEDIA_ROOT = "/var/local/rainmap/public/media/"
 
 # URL that handles the media served from MEDIA_ROOT. Make sure to use a
 # trailing slash if there is a path component (optional in other cases).
@@ -138,5 +138,26 @@ BROKER_USER = "rainq"
 BROKER_PASSWORD = ""
 BROKER_VHOST = "/"
 
+CELERY_DISABLE_RATE_LIMITS = True
 CELERY_RESULT_BACKEND = "amqp"
 CELERY_IMPORTS = ("core.tasks", )
+CELERY_DEFAULT_QUEUE = "rainq"
+CELERY_DEFAULT_EXCHANGE_TYPE = "direct"
+CELERY_DEFAULT_ROUTING_KEY = "rainq"
+CELERY_QUEUES = {
+    CELERY_DEFAULT_QUEUE: {
+        "exchange": "rainq",
+        "binding_key": CELERY_DEFAULT_ROUTING_KEY,
+    },
+    "email": {
+        "exchange": "email",
+        "binding_key": "rainq.email",
+    },
+}
+# 'finish_scan' is a wrap-up task that MUST execute on the appserver
+CELERY_ROUTES = ({"rainq.tasks.process_result": {
+                    "queue": "email",
+                    "routing_key": "rainq.email"}}, )
+
+# max size in kB for outgoing attachments
+EMAIL_RESULT_LIMIT = 1000
