--- a/src/django/rainmap/settings.example
+++ b/src/django/rainmap/settings.example
@@ -131,6 +131,9 @@ DEFAULT_FROM_EMAIL = ''
 # Email address shown when sending messages to Admins
 SERVER_EMAIL = ''
 
+# max size in kB for outgoing attachments
+EMAIL_RESULT_LIMIT = 1000
+
 ### RABBITMQ ###
 BROKER_HOST = "localhost"
 BROKER_PORT = 5672
@@ -138,26 +141,28 @@ BROKER_USER = "rainq"
 BROKER_PASSWORD = ""
 BROKER_VHOST = "/"
 
-CELERY_DISABLE_RATE_LIMITS = True
 CELERY_RESULT_BACKEND = "amqp"
-CELERY_IMPORTS = ("core.tasks", )
-CELERY_DEFAULT_QUEUE = "rainq"
+CELERY_IMPORTS = ("rainq.tasks", )
+CELERY_DISABLE_RATE_LIMITS = True
+CELERY_DEFAULT_QUEUE = "rainq_worker"
 CELERY_DEFAULT_EXCHANGE_TYPE = "direct"
-CELERY_DEFAULT_ROUTING_KEY = "rainq"
+CELERY_DEFAULT_ROUTING_KEY = "rainq_worker"
 CELERY_QUEUES = {
     CELERY_DEFAULT_QUEUE: {
         "exchange": "rainq",
         "binding_key": CELERY_DEFAULT_ROUTING_KEY,
     },
-    "email": {
-        "exchange": "email",
-        "binding_key": "rainq.email",
+    "rainq_app": {
+        "exchange": "rainq_app",
+        "binding_key": "rainq.app",
     },
 }
-# 'finish_scan' is a wrap-up task that MUST execute on the appserver
-CELERY_ROUTES = ({"rainq.tasks.process_result": {
-                    "queue": "email",
-                    "routing_key": "rainq.email"}}, )
-
-# max size in kB for outgoing attachments
-EMAIL_RESULT_LIMIT = 1000
+# 'process_result' is a wrap-up task that MUST execute on the appserver
+CELERY_ROUTES = (
+    {"rainq.tasks.process_result":
+        {
+            "queue": "rainq_app",
+            "routing_key": "rainq.app",
+        }
+    },
+)
