Tweaked the sample configuration files for use with Rainmap's dependencies.

--- a/docs/conf/rainmap.conf
+++ b/docs/conf/rainmap.conf
@@ -3,9 +3,15 @@
 
 # socket needed by mod_wsgi
 WSGISocketPrefix /var/run/wsgi
-#
-# The following should only be used if Apache serves both static and dynamic content
-<VirtualHost *:8080>
+
+<Directory /var/local/rainmap/storage>
+    <FilesMatch "\.(?i:xml)$">
+        ForceType application/xml
+        Header set Content-Disposition attachment
+    </FilesMatch>
+</Directory>
+
+<VirtualHost *:80>
     ServerAdmin rainmap@rainmap
     DocumentRoot /var/local/rainmap/public/
     ServerName rainmap
@@ -15,13 +21,24 @@ WSGISocketPrefix /var/run/wsgi
     WSGIDaemonProcess rainmap processes=2 threads=15 display-name=%{GROUP}
     WSGIProcessGroup rainmap
 
-    WSGIScriptAlias / /var/local/rainmap/django/rainmap.wsgi
-    
     Alias /admin-media/ /var/local/rainmap/public/admin-media/
-    Alias /storage /var/local/rainmap/storage/
+    Alias /storage/ /var/local/rainmap/storage/
 
     Alias /robots.txt /var/local/rainmap/public/robots.txt
     Alias /favicon.ico /var/local/rainmap/public/favicon.ico
 
-    Alias /media/ /var/local/rainmap/public/media/
+    <Directory /var/local/rainmap/public>
+        Order deny,allow
+        Allow from all
+        AllowOverride AuthConfig
+    </Directory>
+
+    WSGIScriptAlias / /var/local/rainmap/django/rainmap.wsgi
+
+    <Directory /var/local/rainmap/django>
+        Order allow,deny
+        Allow from all
+        AllowOverride AuthConfig
+    </Directory>
+
 </VirtualHost>
