--- a/docs/conf/supervisord/celeryd.conf
+++ b/docs/conf/supervisord/celeryd.conf
@@ -1,9 +1,11 @@
+# /etc/supervisord/celeryd.conf
 ; =======================================
 ;  celeryd supervisor example for Django
 ; =======================================
 
 [program:celery]
-command=/usr/bin/python /var/local/rainmap/django/rainmap/manage.py celeryd --loglevel=INFO
+; Remove rainq_worker from the list of queues (-Q) to prevent this node from performing any scanning tasks
+command=/usr/bin/python /var/local/rainmap/django/rainmap/manage.py celeryd --loglevel=INFO --concurrency=2 -Q rainq_app,rainq_worker
 directory=/var/local/rainmap/django/
 ; user=root ; implicit from supervisord.conf
 numprocs=1
