--- a/docs/conf/supervisord.conf
+++ b/docs/conf/supervisord.conf
@@ -1,8 +1,10 @@
+# /etc/supervisord.conf
+# Main configuration file for Supervisord. Don't forget the [include]
 [unix_http_server]
 file=/tmp/supervisor.sock   ; path to your socket file
 
 [supervisord]
-logfile=/var/log/supervisord/supervisord.log ; supervisord log file
+logfile=/var/log/supervisor/supervisord.log ; supervisord log file
 logfile_maxbytes=50MB       ; maximum size of logfile before rotation
 logfile_backups=10          ; number of backed up logfiles
 loglevel=info               ; info, debug, warn, trace
@@ -11,7 +13,7 @@ nodaemon=false              ; run supervisord as a daemon
 minfds=1024                 ; number of startup file descriptors
 minprocs=200                ; number of process descriptors
 user=root                   ; default user
-childlogdir=/var/log/supervisord/            ; where child log files will live
+childlogdir=/var/log/supervisor/            ; where child log files will live
 
 
 [rpcinterface:supervisor]
@@ -23,11 +25,11 @@ serverurl=unix:///tmp/supervisor.sock ; use unix:// schem for a unix sockets.
 
 [include]
 
-# Uncomment this line for celeryd for Python
-;files=celeryd.conf
+; Uncomment the following line for celeryd for Python (path relative to /etc/)
+; files=celeryd.conf
 
-# Uncomment this line for celeryd for Django.
-files=supervisor.d/celeryd.conf
+; Uncomment the following line for celeryd for Django (path relative to /etc/)
+; files=supervisord/celeryd.conf
 
 
 
