Added more output formats for scan results

--- a/contrib/rainmap.conf
+++ b/contrib/rainmap.conf
@@ -9,6 +9,10 @@ WSGISocketPrefix /var/run/wsgi
         ForceType application/xml
         Header set Content-Disposition attachment
     </FilesMatch>
+    <FilesMatch "\.(?i:g)?(?i:nmap)$">
+        ForceType text/plain
+        Header set Content-Disposition attachment
+    </FilesMatch>
 </Directory>
 
 <VirtualHost *:80>
