Updated paths for supervisor's environment

--- a/contrib/celeryd.conf
+++ b/contrib/celeryd.conf
@@ -13,7 +13,7 @@
 command=celeryd --concurrency=4 --loglevel=INFO -Q rainq_worker
 
 ; Set PYTHONPATH to the directory containing celeryconfig.py
-environment=PYTHONPATH=/var/local/rainmap/celeryd/
+environment=PYTHONPATH='/var/local/rainmap/celeryd/'
 
 directory=/var/local/rainmap/celeryd/
 user=root
