--- a/contrib/supervisord/celeryd.conf
+++ b/contrib/supervisord/celeryd.conf
@@ -6,7 +6,9 @@
 [program:celery]
 ; Remove rainq_worker from the list of queues (-Q) to prevent this node from performing any scanning tasks
 command=/usr/bin/python /var/local/rainmap/django/rainmap/manage.py celeryd --loglevel=INFO --concurrency=2 -Q rainq_app,rainq_worker
-directory=/var/local/rainmap/django/
+
+environment=PYTHONPATH='/var/local/rainmap/celeryd/'
+directory=/var/local/rainmap/celeryd/
 ; user=root ; implicit from supervisord.conf
 numprocs=1
 stdout_logfile=/var/log/rainmap/celeryd.log
