moved configuration from contrib/ to conf/puppet to ease deployment [WIP]

--- a/conf/puppet/modules/apache/files/rainmap.conf
+++ b/conf/puppet/modules/apache/files/rainmap.conf
@@ -1,10 +1,10 @@
-# /etc/httpd/conf.d/rainmap.conf
 # Configuration file for Apache
+# DEPRECATED - please consider using gunicorn + nginx
 
 # socket needed by mod_wsgi
-WSGISocketPrefix /var/run/wsgi
+WSGISocketPrefix /srv/rainmap/run/wsgi
 
-<Directory /var/local/rainmap/storage>
+<Directory /srv/rainmap/storage>
     <FilesMatch "\.(?i:xml)$">
         ForceType application/xml
         Header set Content-Disposition attachment
@@ -17,29 +17,29 @@ WSGISocketPrefix /var/run/wsgi
 
 <VirtualHost *:80>
     ServerAdmin rainmap@rainmap
-    DocumentRoot /var/local/rainmap/public/
+    DocumentRoot /srv/rainmap/public/
     ServerName rainmap
-    ErrorLog /var/log/rainmap/httpd-error_log
-    CustomLog /var/log/rainmap/httpd-access_log common
+    ErrorLog /srv/rainmap/log/httpd/error.log
+    CustomLog /srv/rainmap/log/httpd/access.log common
 
     WSGIDaemonProcess rainmap processes=2 threads=15 display-name=%{GROUP}
     WSGIProcessGroup rainmap
 
-    Alias /admin-media/ /var/local/rainmap/public/admin-media/
-    Alias /storage/ /var/local/rainmap/storage/
+    Alias /admin-media/ /srv/rainmap/public/admin-media/
+    Alias /storage/ /srv/rainmap/storage/
 
-    Alias /robots.txt /var/local/rainmap/public/robots.txt
-    Alias /favicon.ico /var/local/rainmap/public/favicon.ico
+    Alias /robots.txt /srv/rainmap/public/robots.txt
+    Alias /favicon.ico /srv/rainmap/public/favicon.ico
 
-    <Directory /var/local/rainmap/public>
+    <Directory /srv/rainmap/public>
         Order deny,allow
         Allow from all
         AllowOverride AuthConfig
     </Directory>
 
-    WSGIScriptAlias / /var/local/rainmap/django/rainmap.wsgi
+    WSGIScriptAlias / /srv/rainmap/django/rainmap.wsgi
 
-    <Directory /var/local/rainmap/django>
+    <Directory /srv/rainmap/django>
         Order allow,deny
         Allow from all
         AllowOverride AuthConfig
